#
# $Id$
#
# Copyright (C) 2002 ETC s.r.o.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA.
#
# Written by Marcel Telka <marcel@telka.sk>, 2002.
#

include $(top_srcdir)/Makefile.rules

SUBDIRS = \
	libbrux \
	doc \
	include \
	data \
	src \
	po

noinst_HEADERS = \
	sysdep.h

EXTRA_DIST = \
	Makefile.rules

ACLOCAL_AMFLAGS = -I m4
.
./xcr3128xl-vq100
./xcr3128xl-vq100/xcr3128xl-vq100
./xcr3032xl-vq44
./xcr3032xl-vq44/xcr3032xl-vq44
./xcr3032xl-vq44/STEPPINGS
./xcr3256xl-ft256
./xcr3256xl-ft256/xcr3256xl-ft256
./xcr3256xl-ft256/STEPPINGS
./xc2c256-tq144
./xc2c256-tq144/xc2c256-tq144
./xc2c256-tq144/STEPPINGS
./xcr3128xl-cs144
./xcr3128xl-cs144/xcr3128xl-cs144
./xcr3128xl-cs144/STEPPINGS
./xc18v04pc44
./xc18v04pc44/xc18v04pc44
./xc18v04pc44/STEPPINGS
./xc2s200e-pq208
./xc2s200e-pq208/STEPPINGS
./xc2s200e-pq208/xc2s200e-pq208
./xc3s1000
./xc3s1000/xc3s1000_fg676
./xc3s1000/xc3s1000
./xc3s1000/xc3s1000_fg320
./xc3s1000/xc3s1000l_ft256
./xc3s1000/xc3s1000_ft256
./xc3s1000/xc3s1000l_fg456
./xc3s1000/STEPPINGS
./xc3s1000/xc3s1000_fg456
./xc3s1000/xc3s1000l_fg676
./xc3s1000/xc3s1000l
./xc3s1000/xc3s1000l_fg320
./xc3s100e_die
./xc3s100e_die/xc3s100e_pq208
./xc3s100e_die/xc3s100e_tq144
./xc3s100e_die/xc3s100e_die
./xc3s100e_die/STEPPINGS
./xc3s100e_die/xc3s100e_vq100
./xc3s1500
./xc3s1500/xc3s1500_fg456
./xc3s1500/xc3s1500l_fg676
./xc3s1500/xc3s1500l
./xc3s1500/xc3s1500l_fg320
./xc3s1500/xc3s1500_fg676
./xc3s1500/xc3s1500
./xc3s1500/xc3s1500_fg320
./xc3s1500/STEPPINGS
./xc3s1500/xc3s1500l_fg456
./xc3s200
./xc3s200/xc3s200_tq144
./xc3s200/xc3s200
./xc3s200/xc3s200_ft256
./xc3s200/xc3s200_vq100
./xc3s200/STEPPINGS
./xc3s200/xc3s200_pq208
./xc3s2000
./xc3s2000/xc3s2000_fg676
./xc3s2000/xc3s2000
./xc3s2000/xc3s2000l_fg900
./xc3s2000/xc3s2000_fg900
./xc3s2000/STEPPINGS
./xc3s2000/xc3s2000_fg456
./xc3s2000/xc3s2000l_fg676
./xc3s2000/xc3s2000l
./xc3s400
./xc3s400/xc3s400_fg456
./xc3s400/xc3s400_tq144
./xc3s400/xc3s400
./xc3s400/xc3s400_fg320
./xc3s400/xc3s400_ft256
./xc3s400/STEPPINGS
./xc3s400/xc3s400_pq208
./xc3s4000
./xc3s4000/xc3s4000l
./xc3s4000/xc3s4000_fg676
./xc3s4000/xc3s4000
./xc3s4000/xc3s4000l_fg900
./xc3s4000/xc3s4000_fg900
./xc3s4000/xc3s4000l_fg1156
./xc3s4000/STEPPINGS
./xc3s4000/xc3s4000_fg1156
./xc3s50
./xc3s50/xc3s50_pq208
./xc3s50/xc3s50_tq144
./xc3s50/xc3s50
./xc3s50/STEPPINGS
./xc3s50/xc3s50_vq100
./xc3s50/xc3s50_cp132
./xc3s5000
./xc3s5000/xc3s5000
./xc3s5000/xc3s5000_fg900
./xc3s5000/STEPPINGS
./xc3s5000/xc3s5000_fg1156
./xc3s500e_fg320
./xc3s500e_fg320/xc3s500e_ft256
./xc3s500e_fg320/xc3s500e_pq208
./xc3s500e_fg320/xc3s500e_fg320
./xc3s500e_fg320/STEPPINGS
./xc9572xl_vq44
./xc9572xl_vq44/xc9572xl_vq44
./xc9572xl_vq44/STEPPINGS
./xcf04s
./xcf04s/xcf04s
./xcf04s/STEPPINGS
./PARTS
